--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,52 @@
             --border: #333333;
         }
 
+        .menu-toggle {
+            display: none;
+            position: fixed;
+            top: 35px;
+            left: 12px;
+            z-index: 1000;
+            background: var(--accent);
+            border: none;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 16px;
+            color: #000;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
+            transition: left 0.3s;
+        }
+
+        @media (max-width: 900px) {
+            .menu-toggle {
+                display: block;
+            }
+
+            .sidebar {
+                position: fixed;
+                left: 0;
+                top: 0;
+                height: 100%;
+                z-index: 999;
+                transform: translateX(-100%);
+                transition: transform 0.3s;
+                box-shadow: 2px 0 8px rgba(0, 0, 0, 0.18);
+            }
+
+            .sidebar.open {
+                transform: translateX(0);
+            }
+
+            .sidebar.open~.menu-toggle {
+                left: 232px;
+            }
+
+            .main-container {
+                margin-left: 0;
+            }
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background: var(--bg-primary);
@@ -457,14 +503,18 @@
 </head>
 
 <body>
+    <div id="connection-info"
+        style="background: var(--warning); color: #000; padding: 8px 16px; font-size: 14px; display: none; border-bottom: 1px solid var(--border);">
+    </div>
     <div class="titlebar">
         <div class="titlebar-title">RNDR Node Monitor - Web Interface</div>
     </div>
     <div class="main-container">
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
             <h3>Network Nodes</h3>
             <ul class="node-list" id="nodeList"></ul>
         </div>
+        <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
         <div class="content">
             <div class="dashboard-header">
                 <h1 class="dashboard-title" id="nodeTitle"></h1>
@@ -575,6 +625,19 @@
             </div>
         </div>
     </div>
+    <script>
+        function toggleSidebar() {
+            document.getElementById('sidebar').classList.toggle('open');
+        }
+        document.addEventListener('click', (e) => {
+            if (window.innerWidth <= 900) {
+                const sidebar = document.getElementById('sidebar');
+                if (!e.target.closest('.sidebar') && !e.target.closest('.menu-toggle')) {
+                    sidebar.classList.remove('open');
+                }
+            }
+        });
+    </script>
     <script src="/web-script.js"></script>
 </body>
 
