--- a/index.html
+++ b/index.html
@@ -622,6 +622,51 @@
             padding: 8px;
             font-size: 13px;
         }
+
+        .qr-helper {
+            display: inline-block;
+            margin-left: 8px;
+            color: var(--accent);
+            cursor: help;
+            position: relative;
+        }
+
+        .qr-popup {
+            display: none;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            background: var(--bg-secondary);
+            border: 1px solid var(--border);
+            border-radius: 8px;
+            padding: 15px;
+            z-index: 1000;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 200px;
+        }
+
+        .qr-helper:hover .qr-popup {
+            display: block;
+        }
+
+        .qr-code {
+            width: 180px;
+            height: 180px;
+            margin: 0 auto;
+            image-rendering: pixelated;
+        }
+
+        .qr-code canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        .qr-title {
+            font-size: 12px;
+            color: var(--text-secondary);
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 
@@ -761,6 +806,7 @@
     <script>
         const { ipcRenderer, shell } = require('electron');
         const os = require('os');
+        const qrcode = require('qrcode-generator');
 
         let selectedNodeName = 'local';
         let networkNodes = [];
@@ -1094,8 +1140,32 @@
         ipcRenderer.on('hosting-status-update', (event, { currentHostName }) => {
             const statusEl = document.getElementById('hostStatus');
             if (currentHostName) {
-                const url = `http://render.local:34568`;
-                statusEl.innerHTML = `Web host: <strong>${currentHostName}</strong> at <a href="#" onclick="shell.openExternal('${url}')">${url}</a>`;
+                const dnsUrl = `http://render.local:34568`;
+                const ipAddress = document.getElementById('networkAdapterSelect').value;
+                const ipUrl = `http://${ipAddress}:34568`;
+
+                statusEl.innerHTML = `Web host: <strong>${currentHostName}</strong> at <a href="#" onclick="shell.openExternal('${dnsUrl}')">${dnsUrl}</a>
+                <span class="qr-helper">Mobile?
+                    <div class="qr-popup">
+                        <div class="qr-title">Scan to open on mobile</div>
+                        <div class="qr-code" id="qrCode"></div>
+                        <div style="font-size: 11px; margin-top: 8px; color: var(--text-secondary);">
+                            IP: ${ipAddress}
+                        </div>
+                    </div>
+                </span>`;
+
+                const qr = qrcode(0, 'L');
+                qr.addData(ipUrl);
+                qr.make();
+                const qrSvg = qr.createSvgTag({
+                    cellSize: 4,
+                    margin: 2,
+                    scalable: true
+                });
+
+                const styledQr = qrSvg.replace('<svg', '<svg style="stroke: var(--accent); stroke-width: 0.5;"');
+                document.getElementById('qrCode').innerHTML = styledQr;
             } else {
                 statusEl.textContent = 'No web host active.';
             }
